--- a/Frontend/css/profile.css
+++ b/Frontend/css/profile.css
@@ -1,4 +1,9 @@
-/* css/profile.css */
+*, ::after, ::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background: #f3f3f3;
