--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1,3 +1,9 @@
+*, ::after, ::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background: #f9f9f9;
